[gd_scene load_steps=15 format=3 uid="uid://bmocmlivoogw2"]

[ext_resource type="Script" path="res://Alerts/Shoutout/Shoutout.gd" id="1_wp7ig"]
[ext_resource type="Texture2D" uid="uid://bubq7lkrphwyk" path="res://Alerts/Images/ShoutOutAlert.png" id="2_3qmo7"]
[ext_resource type="FontFile" uid="uid://cvyynw1naq83g" path="res://Fonts/monogram.ttf" id="4_g7pus"]
[ext_resource type="AudioStream" uid="uid://d38i12601n71l" path="res://Alerts/SFX/win.wav" id="4_j26oi"]
[ext_resource type="Texture2D" uid="uid://bud0twtdl2fdg" path="res://Alerts/Images/YellowBox.png" id="4_wuro6"]
[ext_resource type="FontFile" uid="uid://cegb1yr7s7ggv" path="res://Fonts/PIXEARG_.TTF" id="5_2r3aq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ick6v"]

[sub_resource type="LabelSettings" id="LabelSettings_rckix"]
font = ExtResource("4_g7pus")
font_size = 49
font_color = Color(0.253906, 0.265625, 0.324219, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ascm4"]
font = ExtResource("4_g7pus")
font_size = 32
font_color = Color(0.372549, 0, 0.862745, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lmq61"]
content_margin_top = 5.0

[sub_resource type="LabelSettings" id="LabelSettings_c01bb"]
font = ExtResource("5_2r3aq")
font_color = Color(0.253906, 0.265625, 0.324219, 1)

[sub_resource type="Animation" id="Animation_w6xia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}

[sub_resource type="Animation" id="Animation_m34wn"]
resource_name = "Show"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 9.8, 9.9, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1e-05)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_j26oi")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hl3j3"]
_data = {
"RESET": SubResource("Animation_w6xia"),
"Show": SubResource("Animation_m34wn")
}

[node name="Shoutout" type="Node2D"]
texture_filter = 1
script = ExtResource("1_wp7ig")

[node name="Container" type="Node2D" parent="."]
position = Vector2(-1, -2)
scale = Vector2(1, 1e-05)

[node name="ScaledContainer" type="Node2D" parent="Container"]
scale = Vector2(3, 3)

[node name="ShoutOutAlert" type="Sprite2D" parent="Container/ScaledContainer"]
position = Vector2(26, -11.6667)
texture = ExtResource("2_3qmo7")

[node name="ProfileImage" type="TextureRect" parent="Container"]
custom_minimum_size = Vector2(120, 120)
offset_left = -176.0
offset_top = -83.0
offset_right = -56.0
offset_bottom = 37.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_wuro6")
expand_mode = 1
stretch_mode = 5

[node name="Control" type="Panel" parent="Container"]
clip_children = 1
offset_left = -51.0
offset_top = -88.0
offset_right = 341.0
offset_bottom = 63.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ick6v")

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -11.0
offset_right = -20.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = -5

[node name="StreamerNameLabel" type="Label" parent="Container/Control/VBoxContainer"]
layout_mode = 2
text = "Streamer"
label_settings = SubResource("LabelSettings_rckix")
clip_text = true
text_overrun_behavior = 1

[node name="CategoryLabel" type="Label" parent="Container/Control/VBoxContainer"]
layout_mode = 2
text = "Game"
label_settings = SubResource("LabelSettings_ascm4")
clip_text = true
text_overrun_behavior = 1

[node name="TitleLabel" type="Label" parent="Container/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_lmq61")
text = "asdasd"
label_settings = SubResource("LabelSettings_c01bb")
vertical_alignment = 2
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hl3j3")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.226
